--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pymem = "^1.2"
 
 [tool.poetry.dev-dependencies]
 pyinstaller = "^3.6"
+pywin32-ctypes = "^0.2.0"
+pefile = "^2019.4.18"
 
 [tool.poetry.scripts]
 wizwalker = "wizwalker.__main__:main"
