--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "GPL-3.0-or-later"
 python = "^3.8"
 prompt_toolkit = "^3.0.5"
 pymem = {git = "https://github.com/srounet/Pymem"}
+loguru = "^0.5.1"
 
 [tool.poetry.dev-dependencies]
 pyinstaller = "^3.6"
