--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "wizwalker"
-version = "0.4.0"
+version = "0.5.0"
 description = "Automation bot for wizard101"
 authors = ["StarrFox <starrfox6312@gmail.com>"]
 license = "GPL-3.0-or-later"
@@ -18,7 +18,7 @@ pywin32-ctypes = "^0.2.0"
 pefile = "^2019.4.18"
 
 [tool.poetry.scripts]
-wizwalker = "wizwalker.__main__:main"
+wizwalker = "wizwalker.__main__:sync_main"
 wiz = "wizwalker.utils:quick_launch"
 
 [build-system]
