--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,10 @@ license = "GPL-3.0-or-later"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pymem = {git = "https://github.com/srounet/Pymem"}
 loguru = "^0.5.1"
 aioconsole = "^0.2.1"
 aiofiles = "^0.5.0"
+pymem = "^1.2"
 
 [tool.poetry.dev-dependencies]
 pyinstaller = "^3.6"
