--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "wizwalker"
-version = "0.7.0"
+version = "0.7.1"
 description = "Automation bot for wizard101"
 authors = ["StarrFox <starrfox6312@gmail.com>"]
 license = "GPL-3.0-or-later"
@@ -10,7 +10,7 @@ python = "^3.8"
 loguru = "^0.5.1"
 aioconsole = "^0.2.1"
 aiofiles = "^0.5.0"
-pymem = "^1.2"
+pymem = "1.3"
 
 [tool.poetry.dev-dependencies]
 pyinstaller = "^3.6"
