--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [tool.poetry]
 name = "wizwalker"
-version = "0.11.0"
+version = "0.12.0"
 description = "Automation bot for wizard101"
 authors = ["StarrFox <starrfox6312@gmail.com>"]
 license = "GPL-3.0-or-later"
+readme = "README.md"
+repository = "https://github.com/StarrFox/wizwalker"
 
 [tool.poetry.dependencies]
 python = "^3.8"
