--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ appdirs = "^1.4.4"
 pyinstaller = "^3.6"
 pywin32-ctypes = "^0.2.0"
 pefile = "^2019.4.18"
+sphinx = "^3.2.1"
+sphinx_rtd_theme = "^0.5.0"
 
 [tool.poetry.scripts]
 wizwalker = "wizwalker.__main__:main"
