--- a/.github/workflows/upload_docs.yml
+++ b/.github/workflows/upload_docs.yml
@@ -21,20 +21,17 @@ jobs:
     - name: Install poetry
       run: python3.8 -m pip install poetry
     - name: Install deps
+      run: poetry install
+    -name: Build docs
       run: |
-        poetry install
-    # Standard drop-in approach that should work for most people.
-    - uses: ammaraskar/sphinx-action@master
-      with:
-        docs-folder: "docs/"
-    # Great extra actions to compose with:
-    # Create an artifact of the html output.
+        poetry shell
+        cd docs
+        make html
+        cd ..
     - uses: actions/upload-artifact@v1
       with:
         name: DocumentationHTML
         path: docs/_build/html/
-    # Publish built docs to gh-pages branch.
-    # ===============================
     - name: Commit documentation changes
       run: |
         git clone https://github.com/StarrFox/wizwalker.git --branch gh-pages --single-branch gh-pages
