we don't have an interactive shell in actions

--- a/.github/workflows/upload_docs.yml
+++ b/.github/workflows/upload_docs.yml
@@ -23,11 +23,7 @@ jobs:
     - name: Install deps
       run: poetry install
     - name: Build docs
-      run: |
-        poetry shell
-        cd docs
-        make html
-        cd ..
+      run: poetry run sphinx-build docs docs/_build
     - uses: actions/upload-artifact@v1
       with:
         name: DocumentationHTML
