--- a/.github/workflows/upload_docs.yml
+++ b/.github/workflows/upload_docs.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         python-version: 3.8
     - name: Install poetry
-      run: python3.8 -m pip install poetry
+      run: py -3.8 -m pip install poetry
     - name: Install deps
       run: poetry install
     - name: Build docs
@@ -36,10 +36,11 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
-        git commit -m "Update documentation" -a || true
+        git commit -m "Update documentation" -a
         # The above command will fail if no changes were present, so we ignore
         # that.
     - name: Push changes
+      if: ${{ success() }}
       uses: ad-m/github-push-action@master
       with:
         branch: gh-pages
