--- a/.github/workflows/upload_docs.yml
+++ b/.github/workflows/upload_docs.yml
@@ -33,8 +33,7 @@ jobs:
         git config --local user.name "GitHub Action"
         git add .
         git commit -m "Update documentation" -a
-        # The above command will fail if no changes were present, so we ignore
-        # that.
+      shell: cmd
     - name: Push changes
       if: ${{ success() }}
       uses: ad-m/github-push-action@master
