--- a/.github/workflows/upload_docs.yml
+++ b/.github/workflows/upload_docs.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Commit documentation changes
       run: |
         git clone https://github.com/StarrFox/wizwalker.git --branch gh-pages --single-branch gh-pages
-        xcopy /E /I "docs/_build/html" "gh-pages"
+        xcopy /E /I /Y docs\_build\html gh-pages
         cd gh-pages
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
