--- a/.github/workflows/upload_docs.yml
+++ b/.github/workflows/upload_docs.yml
@@ -1,5 +1,3 @@
-# Modified from https://github.com/ammaraskar/sphinx-action-test/blob/master/.github/workflows/default.yml
-
 name: Upload_docs
 
 on:
@@ -23,11 +21,15 @@ jobs:
     - name: Install deps
       run: poetry install
     - name: Build docs
-      run: poetry run sphinx-build docs docs/_build
+      run: poetry run sphinx-build docs docs/_build/html
+    - uses: actions/upload-artifact@v1
+      with:
+        name: HTML_DOCS
+        path: docs/_build/html
     - name: Commit documentation changes
       run: |
         git clone https://github.com/StarrFox/wizwalker.git --branch gh-pages --single-branch gh-pages
-        xcopy /E /I /Y docs\_build\html gh-pages
+        xcopy /E /I /Y "docs\_build\html" "gh-pages"
         cd gh-pages
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
