--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ aioconsole = "^0.2.1"
 aiofiles = "^0.5.0"
 pymem = "1.3"
 appdirs = "^1.4.4"
+click = "^7.1.2"
+click_default_group = "^1.2.2"
 
 [tool.poetry.dev-dependencies]
 pyinstaller = "^3.6"
