--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pymem = "1.3"
 appdirs = "^1.4.4"
 click = "^7.1.2"
 click_default_group = "^1.2.2"
+aiomonitor = "^0.4.5"
+terminaltables = "^3.1.0"
 
 [tool.poetry.dev-dependencies]
 pyinstaller = "^3.6"
