--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ click = "^7.1.2"
 click_default_group = "^1.2.2"
 aiomonitor = "^0.4.5"
 terminaltables = "^3.1.0"
+janus = "^0.6.1"
 
 [tool.poetry.dev-dependencies]
 pyinstaller = "^3.6"
