--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "wizwalker"
 version = "1.1.1"
-description = "Automation bot for wizard101"
+description = "Wizard101 scripting library"
 authors = ["StarrFox <starrfox6312@gmail.com>"]
 license = "GPL-3.0-or-later"
 readme = "README.md"
@@ -19,13 +19,14 @@ click_default_group = "^1.2.2"
 aiomonitor = "^0.4.5"
 terminaltables = "^3.1.0"
 janus = "^0.6.1"
+lark = "^0.11.3"
 
 [tool.poetry.dev-dependencies]
 pyinstaller = "^3.6"
 pywin32-ctypes = "^0.2.0"
 pefile = "^2019.4.18"
 sphinx = "^3.2.1"
-sphinx_rtd_theme = "^0.5.0"
+amunra-sphinx-theme = "^0.2"
 
 [tool.poetry.scripts]
 wizwalker = "wizwalker.__main__:main"
