--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "wizwalker"
-version = "1.2.5-alpha.0"
+version = "1.2.5"
 description = "Wizard101 scripting library"
 authors = ["StarrFox <starrfox6312@gmail.com>"]
 license = "GPL-3.0-or-later"
