--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,9 @@ pymem = "1.8.3"
 appdirs = "^1.4.4"
 click = "^7.1.2"
 click_default_group = "^1.2.2"
-aiomonitor = "^0.4.5"
 terminaltables = "^3.1.0"
 janus = "^0.6.1"
+cmd2 = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 pyinstaller = "^3.6"
