--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "wizwalker"
-version = "1.3.8"
+version = "1.3.9-alpha.0"
 description = "Wizard101 scripting library"
 authors = ["StarrFox <starrfox6312@gmail.com>"]
 license = "GPL-3.0-or-later"
@@ -19,11 +19,11 @@ click_default_group = "^1.2.2"
 aiomonitor = "^0.4.5"
 terminaltables = "^3.1.0"
 janus = "^0.6.1"
+pefile = "^2021.5.24"
 
 [tool.poetry.dev-dependencies]
 pyinstaller = "^3.6"
 pywin32-ctypes = "^0.2.0"
-pefile = "^2019.4.18"
 sphinx = "^3.2.1"
 amunra-sphinx-theme = "^0.2"
 
