add wizwalker dump compare

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ click = "^8.0.1"
 click_default_group = "^1.2.2"
 terminaltables = "^3.1.0"
 cmd2 = "^1.5.0"
+pefile = "^2021.5.24"
 
 [tool.poetry.dev-dependencies]
 sphinx = "^4.1.1"
