--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,7 @@ regex = "^2022.1.18"
 [tool.poetry.dev-dependencies]
 pyinstaller = "^3.6"
 pywin32-ctypes = "^0.2.0"
-sphinx = "^4.4.0"
-amunra-sphinx-theme = "^0.2"
+pdoc = "^12.0.0"
 
 [tool.poetry.scripts]
 wizwalker = "wizwalker.__main__:main"
