--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ terminaltables = "^3.1.0"
 cmd2 = "^1.5.0"
 pefile = "^2021.5.24"
 regex = "^2022.1.18"
+iced-x86 = "^1.17.0"
 
 [tool.poetry.dev-dependencies]
 sphinx = "^4.1.1"
